Update comment in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
-# Maintained Python versions: 3.8 to 3.12
-# Maintained PostgreSql versions: 12 to 16
+# Currently, Python support versions 3.8 to 3.12
+# Currently, PostgreSql supports versions 12 to 16
 # - Python 3.8 not supported for now: need to fix problem with dependencies
 # - Python 3.9 not supported for now: need to fix problem with dependencies
 env_list =
