--- a/tox.ini
+++ b/tox.ini
@@ -12,9 +12,15 @@ description = run the tests with pytest
 package = wheel
 wheel_build_env = .pkg
 deps =
-    pytest>=6
-    -r reqs/requirements-prod.txt
-    -r reqs/requirements-dev.txt
+    py{310}-pg{12,13,14,15,16}: -r reqs/requirements-prod-3.10.txt
+    py{310}-pg{12,13,14,15,16}: -r reqs/requirements-dev-3.10.txt
+
+    py{311}-pg{12,13,14,15,16}: -r reqs/requirements-prod-3.11.txt
+    py{311}-pg{12,13,14,15,16}: -r reqs/requirements-dev-3.11.txt
+
+    py{312}-pg{12,13,14,15,16}: -r reqs/requirements-prod-3.12.txt
+    py{312}-pg{12,13,14,15,16}: -r reqs/requirements-dev-3.12.txt
+
 allowlist_externals =
     env
     docker
@@ -28,6 +34,7 @@ commands =
 set_env =
     EXPLORATION_TEST=1
     CONTRACT_TEST=1
+    SYSTEM_TEST_FAST=1
     py{310,311,312}-pg{12}: OVERRIDE_PORT=54012
     py{310,311,312}-pg{12}: EXPECTED_POSTGRESQL_MAJOR_VERSION=12
     py{310,311,312}-pg{13}: OVERRIDE_PORT=54013
