--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -166,7 +166,7 @@ services:
       POPYKA_DB_DSN: "postgresql://postgres:pass@pg16:5432/popyka_test"
       POPYKA_PYTHONPATH: "${POPYKA_PYTHONPATH:-}"
       POPYKA_DB_SLOT_NAME: "${POPYKA_DB_SLOT_NAME:-}"
-      LAZYTOSTR_COMPACT: "${LAZYTOSTR_COMPACT:-}"
+      POPYKA_COMPACT_DUMP: "${POPYKA_COMPACT_DUMP:-}"
       POPYKA_KAFKA_BOOTSTRAP_SERVERS: "kafka:9092"
       POPYKA_KAFKA_TOPIC: "${POPYKA_KAFKA_TOPIC:-}"
     stop_grace_period: 1s
