--- a/reqs/requirements-prod-3.12.txt
+++ b/reqs/requirements-prod-3.12.txt
@@ -4,11 +4,21 @@
 #
 #    pip-compile --output-file=reqs/requirements-prod-3.12.txt reqs/requirements-prod.in
 #
+annotated-types==0.6.0
+    # via pydantic
 confluent-kafka==2.3.0
     # via -r reqs/requirements-prod.in
 expandvars==0.12.0
     # via -r reqs/requirements-prod.in
 psycopg2-binary==2.9.9
     # via -r reqs/requirements-prod.in
+pydantic==2.7.1
+    # via -r reqs/requirements-prod.in
+pydantic-core==2.18.2
+    # via pydantic
 pyyaml==6.0.1
     # via -r reqs/requirements-prod.in
+typing-extensions==4.11.0
+    # via
+    #   pydantic
+    #   pydantic-core
